src/objects/Invoice_MERC__c.object
<CustomObject>
    <description>Object to store invoice header information, Integrates with SAP for HCP Payments : MERC : Created on 09/27/2013 by Katy Lorenti, Mavens Consulting</description>
    <fields>
        <fullName>Bank_Account_Number_Encrypted_MERC__c</fullName>
        <description>Bank Account Number encrypted and stamped from the Payee when the Invoice is created.</description>
        <label>Bank Account Number (Encrypted)</label>
        <length>80</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number_MERC__c</fullName>
        <description>Bank Account Number loaded from payee by Workflow.
Created by John A Adams 1/9/2014</description>
        <label>Bank Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_City_MERC__c</fullName>
        <description>Bank City loaded from Payee by Workflow.
Created by John A Adams 1/9/2014</description>
        <label>Bank City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Country_MERC__c</fullName>
        <description>Bank Country loaded from Payee by Workflow.
Created by John A Adams 1/9/2014</description>
        <label>Bank Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name_MERC__c</fullName>
        <description>Bank Name loaded from Payee by Workflow.
Created by John A Adams 1/9/2014</description>
        <label>Bank Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Sort_Code_MERC__c</fullName>
        <description>Sort Code loaded from Payee by Workflow.
Created by John A Adams 1/9/2014</description>
        <label>Bank Sort Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_State_Province_MERC__c</fullName>
        <description>Bank State / Province loaded from Payee by Workflow.
Created by John A Adams 1/9/2014</description>
        <label>Bank State / Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Street_MERC__c</fullName>
        <description>Bank Street loaded from Payee by Workflow.
Created by John A Adams 1/9/2014</description>
        <label>Bank Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Zip_Postal_Code_MERC__c</fullName>
        <description>Bank Zip / Postal Code loaded from Payee by Workflow.
Created by John A Adams 1/9/2014</description>
        <label>Bank Zip / Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code_MERC__c</fullName>
        <description>First 3 characters of Cost Center.  Used for SAP Interface. Oliver Dunford 4th Dec</description>
        <formula>LEFT(Cost_Center_MERC__c ,3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lilly Affiliate Company Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditional_Invoice_Number_MERC__c</fullName>
        <description>Used by the SAP Interface.  If the Customer Invoice is populated this is used, otherwise the Mercury Invoice number is used.  Oliver Dunford 28th Jan 2014.</description>
        <formula>IF(OR(ISNULL( Customer_Invoice_Number_MERC__c ),ISBLANK( Customer_Invoice_Number_MERC__c )),  Name , Customer_Invoice_Number_MERC__c)</formula>
        <label>Conditional Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consulting_Project_Amount_excl_VAT_MERC__c</fullName>
        <description>Used to roll up the total value of Consulting Projects for an Invoice record.  This excludes VAT and is used to calculate CAP at Account level for HCP&apos;s when engaged in Consulting Projects with Lilly.  This is rolled up from the Invoice and NOT the meeting participant for Consulting Projects. Oliver Dunford 7th Jan 2014.</description>
        <label>Consulting Project Amount (excl VAT)</label>
        <summarizedField>Invoice_Line_Item_MERC__c.Consulting_Amount_MERC__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Line_Item_MERC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Consulting Project</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Line_Item_MERC__c.Invoice_MERC__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cost_Center_MERC__c</fullName>
        <description>Cost Centre id entered.
Mercury Transaction Id 
Created by John A Adams 10/30/2013</description>
        <label>Cost Center</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Invoice_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by John A Adams 11/5/2013</description>
        <label>Credit Note Invoice</label>
        <referenceTo>Invoice_MERC__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Note_SAP_Doc_MERC__c</fullName>
        <description>Created by John A Adams 11/5/2013</description>
        <formula>&quot;SAP:999-8999-1234567251&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Note SAP Document #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Id_MERC__c</fullName>
        <description>Customer Id of Beneficiary.  If this this is the HCO, then the HCO Customer Id is populated, otherwise it&apos;s the meeting Participant.   Oliver Dunford 4th Dec 2013</description>
        <formula>IF( OR(ISNULL(HCO_Beneficiary_MERC__c),ISBLANK(HCO_Beneficiary_MERC__c)) ,  Meeting_Participant_MERC__r.Account_MERC__r.Cust_Id_GLBL__c ,  HCO_Beneficiary_MERC__r.Cust_Id_GLBL__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Invoice_Number_MERC__c</fullName>
        <description>Customer Invoice Number.  Assume RMAT will need to record the Invoice number from HCP’s system.
Created by John A Adams 10/20/2013</description>
        <label>Customer Invoice Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Since_Created_Date_MERC__c</fullName>
        <description>Days since Invoice creation.  Used for Reporting.  Oliver Duford 30th Jan 2014.</description>
        <formula>Today()- DateValue( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Created Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Until_Invoice_Submitted_MERC__c</fullName>
        <description>Number of days from Invoice Date to date the Invoice was Submitted. Created 04/17/2014 by KLorenti, Mavens Consulting</description>
        <formula>DATEVALUE(Submitted_for_Payment_Date_MERC__c)  -  Invoice_Date_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Invoice Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HCO_Beneficiary_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Health Care Organizations
Created by John A Adams 10/30/2013</description>
        <label>HCO Beneficiary</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IBAN_MERC__c</fullName>
        <description>IBAN loaded from Payee by Workflow.
Created by John A Adams 1/9/2014</description>
        <label>IBAN</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Order_Number_MERC__c</fullName>
        <description>Pulled over from the Meeting record, should an Internal Order Number be stamped from the Budget onto the Meeting : MERC : Created on 12/5/2013 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>Pulled from the Meeting Record should an Internal Order Number exist against the associated Meeting Budget.  This field remains editable if corrections are needed.  Leave this blank when creating an Invoice to accept the Meeting Internal Order Number</inlineHelpText>
        <label>Internal Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Attached_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag set by Drawloop when an Invoice has been created and attached.  This is used in validation rule to prevent Submit for Payment being set to Yes when no Invoice is present.
Created by John A Adams 1/6/2014</description>
        <label>Invoice Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Date_MERC__c</fullName>
        <description>Date Invoice is issued.
Created by John A Adams 10/20/2013</description>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Type_MERC__c</fullName>
        <description>Stores the reason for the invoice.
Created by John A Adams 10/24/2013</description>
        <label>Invoice Type</label>
        <picklist>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lilly_Affil_Add_City_MERC__c</fullName>
        <formula>Lilly_Affiliate_MERC__r.Primary_Addr_City_GLBL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lilly Affiliate City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lilly_Affil_Add_Country_MERC__c</fullName>
        <formula>Lilly_Affiliate_MERC__r.Primary_Address_Country_GLBL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lilly Affiliate Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lilly_Affil_Add_Ln_1_MERC__c</fullName>
        <formula>Lilly_Affiliate_MERC__r.Primary_Addr_Line1_GLBL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lilly Affiliate Address Line 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lilly_Affil_Add_Ln_2_MERC__c</fullName>
        <formula>Lilly_Affiliate_MERC__r.Primary_Addr_Line2_GLBL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lilly Affiliate Address Line 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lilly_Affil_ID_VAT_MERC__c</fullName>
        <formula>Lilly_Affiliate_MERC__r.Lilly_Company_VAT_ID_GLBL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lilly Affiliate ID/VAT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lilly_Affil_Postal_MERC__c</fullName>
        <formula>Lilly_Affiliate_MERC__r.Primary_Pstl_Cd_Extnsn_GLBL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lilly Affiliate Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lilly_Affiliate_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account to pull in Lilly Affiliate name.
Created by John Adams 1/14/14</description>
        <label>Lilly Affiliate</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices (Lilly Affiliate)</relationshipLabel>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Items_MERC__c</fullName>
        <description>Counts the number of line items for an Invoice. Oliver Dunford 4th Nov 2013.</description>
        <label># Line Items</label>
        <summaryForeignKey>Invoice_Line_Item_MERC__c.Invoice_MERC__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Meeting_City_MERC__c</fullName>
        <description>The Meeting CIty, pulled over from the Meeting Participants associated Meeting.  Oliver Dunford 4th Dec</description>
        <formula>Meeting_Participant_MERC__r.Meeting_MERC__r.City_of_Meeting_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Cost_Center_MERC__c</fullName>
        <description>Customer Facing Cost center pulled from the Meeting.  Created by J Adams 2/6/2014.</description>
        <formula>Meeting_Participant_MERC__r.Meeting_MERC__r.Rep_Cost_Center_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Cost Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Country_MERC__c</fullName>
        <description>Event country
Created by John A Adams 10/25/2013</description>
        <formula>TEXT(Meeting_Participant_MERC__r.Meeting_MERC__r.Event_Country_MERC__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_MERC__c</fullName>
        <description>Lookup of Meeting 
Created by John A Adams 10/30/2013</description>
        <formula>Meeting_Participant_MERC__r.Meeting_MERC__r.Event_Id_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Name_MERC__c</fullName>
        <description>Meeting to which the Invoice relates
Created by John A Adams 10/20/2013</description>
        <formula>Meeting_Participant_MERC__r.Meeting_MERC__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Participant_Account_Id_MERC__c</fullName>
        <formula>CASESAFEID(Meeting_Participant_MERC__r.Account_MERC__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Participant Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Participant_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to find the meeting Participant this invoice is for.
Created by John A Adams 10/4/2013</description>
        <label>Meeting Participant</label>
        <referenceTo>Meeting_Participant_MERC__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Start_Date_MERC__c</fullName>
        <description>Date of Meeting
Created by John A Adams 10/21/2013</description>
        <formula>Meeting_Participant_MERC__r.Meeting_MERC__r.Date_of_Event_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mercury_External_Id_MERC__c</fullName>
        <description>Generated by Workflow used for Integration with External Systems.
Created by J Adams 12/10/2013</description>
        <externalId>true</externalId>
        <label>Mercury External Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mercury_Transaction_Id_MERC__c</fullName>
        <description>Mercury Transaction Id - copy of Invoice SFDC Record ID
Created by John A Adams 10/30/2013</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mercury Transaction Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_MERC__c</fullName>
        <description>Name of HCP that is invoicing.
Created by John A Adams 10/20/2013</description>
        <formula>Meeting_Participant_MERC__r.Account_MERC__r.FirstName &amp; &quot; &quot; &amp;  Meeting_Participant_MERC__r.Account_MERC__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Master_Id_MERC__c</fullName>
        <formula>Meeting_Participant_MERC__r.Account_MERC__r.Cust_Id_GLBL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant Master Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payee_City_MERC__c</fullName>
        <description>Payee City loaded from Payee by Workflow.
Created by John A Adams 1/9/2014</description>
        <label>Payee City</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payee_Country_MERC__c</fullName>
        <description>Payee Country loaded from Payee by Workflow.
Created by John A Adams 1/9/2014</description>
        <label>Payee Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payee_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for Payee information
Created by John A Adams 10/21/2013</description>
        <label>Payee</label>
        <referenceTo>Payee_MERC__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payee_Name_MERC__c</fullName>
        <description>Payee Name loaded from Payee by Workflow.
Created by John A Adams 1/9/2014</description>
        <label>Payee Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payee_State_Province_MERC__c</fullName>
        <description>Payee State / Province loaded from Payee by Workflow.
Created by John A Adams 1/9/2014</description>
        <label>Payee State / Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payee_Street_MERC__c</fullName>
        <description>Payee Street loaded from Payee by Workflow.
Created by John A Adams 1/9/2014</description>
        <label>Payee Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payee_Zip_Postal_Code_MERC__c</fullName>
        <description>Payee Zip / Postal Code loaded from Payee by Workflow.
Created by John A Adams 1/9/2014</description>
        <label>Payee Zip / Postal Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Payment_MERC__c</fullName>
        <description>The purpose of the payment
Created by John A Adams 10/30/2013</description>
        <formula>If ( Meeting_Participant_MERC__r.RecordType.Name = &quot;Service Provider&quot; || Meeting_Participant_MERC__r.RecordType.Name = &quot;Consulting&quot;,
TEXT(Meeting_Participant_MERC__r.Types_of_Service_MERC__c)  &amp; &quot;-&quot; &amp;
TEXT(DAY(DATEVALUE( Meeting_Participant_MERC__r.Meeting_MERC__r.Start_Time_of_Meeting_MERC__c  ))) &amp;
TEXT(MONTH(DATEVALUE(Meeting_Participant_MERC__r.Meeting_MERC__r.Start_Time_of_Meeting_MERC__c  ))) &amp; 
TEXT(YEAR(DATEVALUE(Meeting_Participant_MERC__r.Meeting_MERC__r.Start_Time_of_Meeting_MERC__c ))) &amp;  &quot;-&quot; &amp; Meeting_Participant_MERC__r.Meeting_MERC__r.City_of_Meeting_MERC__c, 

TEXT(Meeting_Participant_MERC__r.Purpose_of_Payment_MERC__c)  &amp; &quot;-&quot; &amp;
TEXT(DAY(DATEVALUE(Meeting_Participant_MERC__r.Meeting_MERC__r.Start_Time_of_Meeting_MERC__c  ))) &amp;
TEXT(MONTH(DATEVALUE(Meeting_Participant_MERC__r.Meeting_MERC__r.Start_Time_of_Meeting_MERC__c  ))) &amp; 
TEXT(YEAR(DATEVALUE(Meeting_Participant_MERC__r.Meeting_MERC__r.Start_Time_of_Meeting_MERC__c ))) &amp;  
&quot;-&quot; &amp; Meeting_Participant_MERC__r.Meeting_MERC__r.City_of_Meeting_MERC__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purpose of Payment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Vendor_Number_MERC__c</fullName>
        <description>Stores the SAP Vendor Number
Created by John A Adams 10/7/2013.</description>
        <label>SAP Vendor Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_for_Payment_MERC__c</fullName>
        <description>Used as final check before Invoice is submitted to SAP.  Created by Oliver Dunford 4th Nov 2013.</description>
        <inlineHelpText>A PDF Invoice must be generated and then uploaded before the record can be submitted for payment.</inlineHelpText>
        <label>Submit for Payment</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_for_Payment_Date_MERC__c</fullName>
        <description>Date the integrators can stamp a datetime when the record was successfully picked up and processed. This value is modified by the Informatica integration. Do not change, update, or add validation rules to this field.
Created by John Adams 11/11/2013</description>
        <inlineHelpText>Stamped automatically by SAP integration. Do not edit.</inlineHelpText>
        <label>Submitted for Payment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subtotal_NET_MERC__c</fullName>
        <description>Subtotal of all line items
Created by John A Adams 10/31/2013</description>
        <label>Subtotal - NET</label>
        <summarizedField>Invoice_Line_Item_MERC__c.Amount_MERC__c</summarizedField>
        <summaryForeignKey>Invoice_Line_Item_MERC__c.Invoice_MERC__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TOTAL_INCL_VAT_MERC__c</fullName>
        <description>Invoice total amount
Created by John A Adams 10/31/2013</description>
        <formula>Subtotal_NET_MERC__c +  Total_VAT_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TOTAL INCL. VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Id_MERC__c</fullName>
        <description>Pulled over from Payee record.  May or may not differ per Payee record added by HCP. Oliver Dunford 17th Feb 2014.</description>
        <label>Tax Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_of_Payment_MERC__c</fullName>
        <label>Terms of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Net 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_VAT_MERC__c</fullName>
        <description>Total VAT for all line items
Created by John A Adams 10/31/2013</description>
        <label>Total VAT</label>
        <summarizedField>Invoice_Line_Item_MERC__c.Tax_Amount_MERC__c</summarizedField>
        <summaryForeignKey>Invoice_Line_Item_MERC__c.Invoice_MERC__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>VAT_Identification_MERC__c</fullName>
        <description>VAT Identification # loaded from Payee by Workflow.
Created by John A Adams 1/9/2014</description>
        <label>VAT Identification #</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice_Number_MERC__c</fullName>
        <description>Vendor Invoice Number 
Created by John A Adams 10/4/2013</description>
        <label>Vendor Invoice Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Meeting_Participant_MERC__c</columns>
        <columns>Participant_MERC__c</columns>
        <columns>Vendor_Invoice_Number_MERC__c</columns>
        <columns>Meeting_Name_MERC__c</columns>
        <columns>Submit_for_Payment_MERC__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Owner_Status</fullName>
        <columns>NAME</columns>
        <columns>Submit_for_Payment_MERC__c</columns>
        <columns>Submitted_for_Payment_Date_MERC__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Meeting_Participant_MERC__c</columns>
        <columns>Meeting_MERC__c</columns>
        <columns>Line_Items_MERC__c</columns>
        <columns>Subtotal_NET_MERC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Invoice_MERC__c.Credit_Note_MERC,Invoice_MERC__c.Credit_Note_Locked_MERC</value>
        </filters>
        <label>Invoice Owner &amp; Status</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Stress_Test_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Submit_for_Payment_MERC__c</columns>
        <columns>Submitted_for_Payment_Date_MERC__c</columns>
        <columns>Days_Until_Invoice_Submitted_MERC__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Alex Gissel</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>6/30/2014 12:00 AM</value>
        </filters>
        <label>Stress Test Invoices</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01Ib0000000ke0uEAA_00Nb0000009admMEAQ</fullName>
        <active>true</active>
        <field>Invoice_MERC__c.Credit_Note_Invoice_MERC__c</field>
        <filterItems>
            <field>Invoice_MERC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Invoice, Invoice Locked</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>nf_01Ib0000000ke0uEAA_00Nb0000009admMEAQ</name>
    </namedFilters>
    <pluralLabel>Invoices</pluralLabel>
    <recordTypes>
        <fullName>Credit_Note_Locked_MERC</fullName>
        <active>true</active>
        <description>Indicates a locked credit note</description>
        <label>Credit Note Locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit_Note_MERC</fullName>
        <active>true</active>
        <description>Used to create Credit Notes.</description>
        <label>Credit Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>Invoice_Invalid_MERC</fullName>
        <active>true</active>
        <description>Invoice record no longer valid, never submitted successfully for processing</description>
        <label>Invoice Invalid</label>
    </recordTypes>
    <recordTypes>
        <fullName>Invoice_Locked_MERC</fullName>
        <active>true</active>
        <description>Record Type for a locked Invoice</description>
        <label>Invoice Locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>Invoice_MERC</fullName>
        <active>true</active>
        <description>Used to create Invoice records</description>
        <label>Invoice</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>MERC_Cost_Center_completed</fullName>
        <active>true</active>
        <description>Ensure that the Cost Center is severn digits long : MERC : Created on 11/05/2013 by Oliver Dunford, Mavens Consulting</description>
        <errorConditionFormula>NOT(REGEX( Cost_Center_MERC__c, &quot;[0-9]{7}&quot;))</errorConditionFormula>
        <errorDisplayField>Cost_Center_MERC__c</errorDisplayField>
        <errorMessage>The Cost Center must be seven digits long.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MERC_Internal_Order_Number_Completed</fullName>
        <active>true</active>
        <description>Ensure that the Internal Order Number is six digits long : MERC : Created on 24/07/2014 by Oliver Dunford, Mavens Consulting</description>
        <errorConditionFormula>NOT( 
OR( 
LEN ( Internal_Order_Number_MERC__c) = 0, 
REGEX(Internal_Order_Number_MERC__c, &quot;[0-9]{6}&quot;) 
) 
)</errorConditionFormula>
        <errorDisplayField>Internal_Order_Number_MERC__c</errorDisplayField>
        <errorMessage>The Internal Order Number must be six digits long.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MERC_Prevent_Line_Item_Changes_if_Locked</fullName>
        <active>true</active>
        <description>Prevents changes to Invoice Line Items if the Invoice/Credit Note is locked : MERC : Created on 11/05/2013 by Oliver Dunford, Mavens Consulting</description>
        <errorConditionFormula>ISCHANGED(Line_Items_MERC__c) &amp;&amp;
(RecordType.Name = &quot;Invoice Locked&quot; || RecordType.Name = &quot;Credit Note Locked&quot;)</errorConditionFormula>
        <errorMessage>This Invoice/Credit Note is locked and cannot be edited.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MERC_Submit_for_Payment_PDF_Check</fullName>
        <active>true</active>
        <description>Prevent an invoice being submitted for payment if the total value is less than zero or if there has not been a PDF generated and attached : MERC : Created on 11/05/2013 by Oliver Dunford, Mavens Consulting</description>
        <errorConditionFormula>ISPICKVAL(Submit_for_Payment_MERC__c,&quot;Yes&quot;) &amp;&amp; 
(Invoice_Attached_MERC__c = FALSE)</errorConditionFormula>
        <errorMessage>PDF missing. Please press the &quot;Generate Content&quot; button at top of this detail page.

An invoice record cannot be submitted for payment if the total is not greater than zero and an Invoice PDF has been created and attached.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MERC_Submit_for_Payment_Total_Check</fullName>
        <active>true</active>
        <description>Prevent an invoice being submitted for payment if the total value is less than zero or if there has not been a PDF generated and attached : MERC : Created on 11/05/2013 by Oliver Dunford, Mavens Consulting</description>
        <errorConditionFormula>ISPICKVAL(Submit_for_Payment_MERC__c,&quot;Yes&quot;) &amp;&amp; 
(TOTAL_INCL_VAT_MERC__c &lt;=0)</errorConditionFormula>
        <errorMessage>Total = 0

An invoice record cannot be submitted for payment if the total is not greater than zero and an Invoice PDF has been created and attached.</errorMessage>
    </validationRules>
</CustomObject>